# tg-audio-dl

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  ghcr-cleanup.yml  update-yt-dlp.yml
docs/: PLAN_CHAPTERS.md  WIREGUARD_PROXY_SETUP.md
scripts/: deploy.sh  smoke_test.py
src/: config.py  main.py
src/bot/: captions.py  filters.py  handlers.py  media.py  progress.py
src/cache/: __init__.py  base.py  disk.py  s3.py
src/downloader/: client.py  url_parser.py
src/utils/: sanitize.py
tests/: conftest.py  test_cache_composite.py  test_cache_disk.py  test_cache_s3.py  test_config.py  test_downloader.py  test_filters.py  test_handlers.py  test_main.py  test_progress.py  test_proxy_integration.py  test_sanitize.py  test_url_parser.py
