[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-download-bot"
version = "0.1.0"
description = "Telegram bot for downloading YouTube audio"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=20.7",
    "yt-dlp>=2024.1.1",
    "pydantic-settings>=2.0",
    "aiofiles>=23.0",
    "aioboto3>=12.0",
    "pysocks>=1.7",
    "mutagen>=1.47",
]

[project.scripts]
bot = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "moto[s3]>=5.0",
    "ruff>=0.2",
    "mypy>=1.0",
    "black>=24.0",
    "types-aiofiles>=25.1.0.20251011",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S105",   # hardcoded password string — expected in test fixtures
    "S107",   # hardcoded password function arg — expected in test fixtures
    "S108",   # insecure temp dir usage — acceptable in tests
    "SIM300", # Yoda conditions — assertion style preference in tests
    "E501",   # line too long — readability over strict line limit in tests
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
omit = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
